Added a new Project for SWTBot tests: de.innot.avreclipse.tests.swtbot Fixed the de.innot.avreclipse.ui.tests project