@@ -20,66 +20,22 @@
 
 	<name>AVR Eclipse UI Test Plug-in</name>
 
-	<properties>
-		<local-p2-site>file:/${basedir}/../de.innot.avreclipse-updatesite/target/site</local-p2-site>
-		<ui.test.vmargs>-Xmx512m -XX:MaxPermSize=256m</ui.test.vmargs>
-	</properties>
-
-	<repositories>
-		<repository>
-			<id>local-p2</id>
-			<layout>p2</layout>
-			<url>${local-p2-site}</url>
-		</repository>
-	</repositories>
-
-	<profiles>
-		<profile>
-			<id>skip-ui-tests</id>
-			<activation>
-				<property>
-					<name>skip-ui-tests</name>
-				</property>
-			</activation>
-			<properties>
-				<maven.test.skip>true</maven.test.skip>
-			</properties>
-		</profile>
-	</profiles>
-
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>maven-osgi-test-plugin</artifactId>
+				<artifactId>tycho-surefire-plugin</artifactId>
 				<version>${tycho-version}</version>
 				<configuration>
-					<testSuite>de.innot.avreclipse.ui.tests</testSuite>
-					<testClass>de.innot.avreclipse.ui.tests.AllTests</testClass>
+					<excludes>
+						<!-- test mojo matches TestProject be default and treats it as PojoTest -->
+						<exclude>**/Test*.class</exclude>
+					</excludes>
 					<useUIHarness>true</useUIHarness>
-					<useUIThread>false</useUIThread>
-					<product>org.eclipse.sdk.ide</product>
-					<argLine>${ui.test.vmargs}</argLine>
-					<application>org.eclipse.ui.ide.workbench</application>
-					<dependencies>
-						<dependency>
-							<type>p2-installable-unit</type>
-							<artifactId>org.eclipse.pde.feature.group</artifactId>
-							<version>${platform-version}</version>
-						</dependency>
-						<dependency>
-							<type>p2-installable-unit</type>
-							<artifactId>de.innot.avreclipse.feature.group</artifactId>
-							<version>[2.5.0,3.0.0)</version>
-						</dependency>
-						<dependency>
-							<type>p2-installable-unit</type>
-							<artifactId>org.eclipse.cvs.feature.group</artifactId>
-							<version>[1.1.2,2.0.0)</version>
-						</dependency>
-					</dependencies>
+					<useUIThread>true</useUIThread>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
+
 </project>
